Added G12 Command - Get PIB
