# swagger.yaml
@@ -13,7 +13,7 @@ security:
 paths:
   /g11_cmd:
     get:
-      summary: G11 command
+      summary: G11 command- Get FP Date_time
       tags: [G1_Commands]
       operationId: app.g11_cmd
 
@@ -31,7 +31,28 @@ paths:
             "Status": pck_Sts
             "recv_pck_Data": pck_Data
 
-      description: Generates FP550 Cmd_Date_Time return message.
+      description: Generates FP550 Cmd_Date_Time() return message.
+  /g12_cmd:
+    get:
+      summary: G12 command-Get_PIB
+      tags: [G1_Commands]
+      operationId: app.g12_cmd
+
+
+      responses:
+        200:
+          description: PIB response
+          schema:
+            type: object
+          examples:
+
+            "LEN": pck_Len
+            "SEQ": pck_Seq
+            "Cmd": pck_Cmd
+            "Status": pck_Sts
+            "recv_pck_Data": pck_Data
+
+      description: Generates FP550 Cmd_Get_PIB() return message.
   /greeting/{name}:
     get:
       summary: Generate greeting
